# qdas-parser

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
src/qdas_parser/: __init__.py  _config.py  _constants.py  _fast.c  _fast.py  _fast.pyx  _fields.py  _models.py  _module.py  _parser.py  qdas.toml
src/qdas_parser/hooks/: hook-qdas_parser.py
tests/: bench_fast.py  conftest.py  test_config.py  test_constants.py  test_models.py  test_module.py  test_parser.py
tests/fixtures/bd/: 2603160002.dfb  2603160002.dfd
tests/fixtures/pc/: 2604020002.dfd  2604020002.dfx
