[project]
name = "qdas-parser"
version = "0.1.0"
description = "A Python parser for the Q-DAS ASCII Transfer Format (V12). Reads .dfd description files and .dfx/.dfb value files, decodes K-Field metadata, and returns structured pandas DataFrames for downstream quality analysis."
authors = [
    {name = "j4ggr", email = "reto@jaeggli.email"},
]
dependencies = [
    "pandas>=3.0",
    "numpy>=2.4",
    "python-dateutil>=2.8",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
